# bridge-realis

./: .dockerignore  .env  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: check_and_build.yml  docker_build.yml  udeps.yaml
bridge/: Cargo.toml
bridge-events/: Cargo.toml
bridge-events/src/: lib.rs
bridge/src/: bsc_to_realis.rs  logger.rs  main.rs  realis_to_bsc.rs
bsc-adapter/: Cargo.toml
bsc-adapter/res/: BEP20.abi  BEP721.abi
bsc-adapter/src/: connection_builder.rs  lib.rs  main.rs
bsc-listener/: Cargo.toml
bsc-listener/src/: event_parser.rs  lib.rs  tx_sender.rs
bsc-sender/: Cargo.toml
bsc-sender/res/: BEP20.abi  BEP721.abi  LIS.sol  contract_token.code  params.json  token.json
bsc-sender/src/: lib.rs  main.rs
db/: Cargo.toml
db/res/: tables.sql
db/src/: lib.rs
logger/: Cargo.toml
logger/src/: lib.rs
message-broker/: Cargo.toml
message-broker/src/: lib.rs  main.rs
primitives/: Cargo.toml
primitives/src/: block.rs  config.rs  db.rs  events.rs  lib.rs  request.rs  types.rs
primitives/src/events/: bsc.rs  mod.rs  realis.rs  traits.rs
realis-adapter/: Cargo.toml
realis-adapter/src/: block_parser.rs  lib.rs  main.rs
realis-db/: Cargo.toml
realis-db/src/: lib.rs
realis-listener/: Cargo.toml
realis-listener/src/: block_parser.rs  errors.rs  extrinsic_parser.rs  lib.rs  listener_builder.rs
realis-responser/: Cargo.toml
realis-responser/src/: lib.rs
realis-sender/: Cargo.toml
realis-sender/src/: lib.rs  main.rs
src/: main.rs
src/config/: block.rs  mod.rs
src/config/events/: bsc.rs  realis.rs
src/entities/: connection_builder.rs  mod.rs
src/entities/res/: BEP20.abi
src/repositories/: mod.rs
src/repositories/res/: tables.sql
src/services/: bsc_listener.rs  event_parser.rs  listener_builder.rs  mod.rs  realis_adapter.rs  realis_listener.rs
tests/: Cargo.toml  bridge-tests.md
tests/src/: accounts.rs  lib.rs
utils/: Cargo.toml
utils/res/: BEP20.abi  BEP721.abi
utils/src/: lib.rs  parse.rs
