[workspace]

members = [
    "bridge",
    "bsc-adapter",
    "bsc-sender",
    "realis-adapter",
    "realis-sender",
    "utils",
    "tests",
    "message-broker",
    "primitives",
#    "realis-db",
    "realis-responser"
]

[patch.'https://github.com//paritytech/substrate']
sp-core = { git = "https://github.com/paritytech/substrate" }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
panic = "unwind"