[workspace]

members = [
    "db",
    "bridge",
    "primitives",
    "bsc-adapter",
    "realis-listener",
]

[patch.'https://github.com//paritytech/substrate']
sp-core = { git = "https://github.com/paritytech/substrate" }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
panic = "unwind"