[package]
name = "bridge-realis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#git
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-primitives" }
realis-bridge = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-bridge" }
sp-runtime = { git = "https://github.com/RealisNetwork/substrate.git", branch = "polkadot-v0.9.9", package = "sp-runtime" }
runtime = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "node-runtime" }
substrate-api-client = { git = "https://github.com/RealisNetwork/substrate-api-client.git", branch = "polka_v0.9.9" }
sp-core = { git = "https://github.com/RealisNetwork/substrate.git", branch = "polkadot-v0.9.9", package = "sp-core" }
realis-macros = { git = "https://github.com/RealisNetwork/rust-lib.git", package = "realis-macros" }
frame-system = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9" }
rust-lib = { git = "https://github.com/RealisNetwork/rust-lib.git", features = ["full"] }

#other
tokio-postgres = { version = "0.7.2", features = ["with-serde_json-1"] }
secp256k1 = { version = "0.20", features = ["recovery"] }
serde = { version = "1.0.135", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["json"] }
backoff = { version = "0.4.0", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.78"
thiserror = "1.0.26"
deadpool = "0.9.2"
futures = "0.3.19"
ethabi = "14.0.0"
web3 = "0.17.0"
log = "0.4"
