[package]
name = "bridge"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Custom dependencies
realis-listener = { path = "../realis-listener" }
realis-adapter = { path = "../realis-adapter" }
bsc-listener = { path = "../bsc-listener" }
bsc-adapter = { path = "../bsc-adapter" }
primitives = { path = "../primitives" }
db = { path = "../db" }
#
substrate-api-client = { git = "https://github.com/RealisNetwork/substrate-api-client.git" }
rust-lib = { git = "https://github.com/RealisNetwork/rust-lib.git" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
