[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Custom dependencies
realis-listener = { path = "../realis-listener" }
realis-adapter = { path = "../realis-adapter" }
bsc-listener = { path = "../bsc-listener" }
bsc-adapter = { path = "../bsc-adapter" }
db = { path = "../db" }
#
rust-lib = { git = "https://github.com/RealisNetwork/rust-lib.git", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"
log = "0.4"
