[package]
name = "bsc-adapter"
version = "0.1.0"
edition = "2018"

[dependencies]
ethabi = "14.1.0"
log = "0.4"
runtime = { git = "https://github.com/RealisNetwork/Realis.Network.git", rev = "4a6a9aab72b90260f4588b0a770d6fb763ae24b1", package = "node-runtime" }
substrate-stellar-sdk = { git = "https://github.com/Daelon02/substrate-stellar.git" }
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", rev = "4a6a9aab72b90260f4588b0a770d6fb763ae24b1", package = "realis-primitives", default-features = false}
tokio = { version = "1.0" }
web3 = "0.16.0"
futures = "0.3.16"
utils = { path = "../utils" }
realis-sender = { path = "../realis-sender" }

sp-core = { git = "https://github.com/paritytech/substrate", rev = "03d4d0d7c129eec3d3ab2876bddbe5d6dfa1f178" }
