[package]
name = "bsc-adapter"
version = "0.1.0"
edition = "2018"

[dependencies]
ethabi = "14.1.0"
log = "0.4"
runtime = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "node-runtime" }
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-primitives", default-features = false }
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", rev = "672a5d4ed9f076525235fef6b5af288f666df803" }
primitive-types = "0.9.1"
web3 = "0.17.0"
futures = "0.3.16"
utils = { path = "../utils" }
realis-sender = { path = "../realis-sender" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "03d4d0d7c129eec3d3ab2876bddbe5d6dfa1f178" }
