[package]
name = "bsc-adapter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitives = { path = "../primitives" }
db = { path = "../db"}

secp256k1 = { version = "0.20", features = ["recovery"] }
web3 = "0.17.0"
log = "0.4"

[dependencies.tokio]
version = "1.12.0"
features = ["sync"]

[dependencies.rust-lib]
git = "https://github.com/RealisNetwork/rust-lib.git"