[package]
name = "bsc-listener"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { git =  "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "node-runtime" }
realis-primitives = { git =  "https://github.com/RealisNetwork/Realis.Network.git", branch = "main" }
#
substrate-api-client = { git = "https://github.com/RealisNetwork/substrate-api-client.git" }
rust-lib = { git = "https://github.com/RealisNetwork/rust-lib.git" }
#
primitives = { path = "../primitives" }
db = { path = "../db" }
#
tokio = { version = "1.12.0", features = ["sync"] }
serde_json = "1.0.70"
futures = "0.3.17"
ethabi = "14.1.0"
web3 = "0.17.0"
log = "0.4.0"