[package]
name = "bsc-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { git =  "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "node-runtime" }
realis-primitives = { git =  "https://github.com/RealisNetwork/Realis.Network.git", branch = "main" }
#

rust-lib = { git = "https://github.com/RealisNetwork/rust-lib.git", features = ["full"] }
#
primitives = { path = "../primitives" }
db = { path = "../db" }
#
tokio = { version = "1.14.0", features = ["sync"] }
serde_json = "1.0.72"
serde = "1.0.131"
ethabi = "14.1.0"
web3 = "0.17.0"
log = "0.4.0"
