[package]
name = "bsc-sender"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
log = "0.4"
runtime = { git = "https://github.com/RealisNetwork/Realis.Network.git", rev = "4a6a9aab72b90260f4588b0a770d6fb763ae24b1", package = "node-runtime" }
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", rev = "4a6a9aab72b90260f4588b0a770d6fb763ae24b1", package = "realis-primitives", default-features = false}
secp256k1 = { version = "0.20", features = ["recovery"] }
web3 = "0.16.0"
utils = { path = "../utils" }

substrate-stellar-sdk = { git = "https://github.com/Daelon02/substrate-stellar.git" }

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
package = "sp-core"
default-features = false
features = ["full_crypto"]

[features]
default = ["std"]
std = [
    "runtime/std"
]
