[package]
name = "bsc-sender"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
log = "0.4"
runtime = { git = "https://github.com/RealisNetwork/Realis.Network.git", rev = "4d2092476407611865f37f412f96093c84c51c80", package = "node-runtime" }
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", rev = "4d2092476407611865f37f412f96093c84c51c80", package = "realis-primitives", default-features = false}
secp256k1 = { version = "0.20", features = ["recovery"] }
web3 = "0.16.0"
utils = { path = "../utils" }
tokio = { version = "^1", features = ["full"]}

substrate-stellar-sdk = { git = "https://github.com/Daelon02/substrate-stellar.git" }

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
package = "sp-core"
default-features = false
features = ["full_crypto"]

[features]
default = ["std"]
std = [
    "runtime/std"
]
