[package]
name = "bsc-sender"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
runtime = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "node-runtime" }
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-primitives", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master", package = "sp-core" }
secp256k1 = { version = "0.20", features = ["recovery"] }
primitive-types = "0.9.1"
web3 = "0.17.0"
utils = { path = "../utils" }
tokio = "1.9"

[features]
default = ["std"]
std = [
    "runtime/std"
]
