[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Custom dependencies
primitives = { path = "../primitives" }

#
tokio-postgres = { version = "0.7.4", features = ["with-serde_json-1"] }
tokio = { version = "1", features = ["sync"] }
serde_json = "1.0.72"
postgres = "0.19.1"
rawsql = "0.1.0"
web3 = "0.17.0"
log = "^0.4"
