[package]
name = "message-broker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratsio = "0.3.0-alpha.1"
env_logger = {version="^0.7"}
tokio = { version = "0.2.25", features = [ "net", "time", "io-util", "macros", "sync"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
native-tls = { version = "^0.2", optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = {version="^0.3"}
futures-core = "^0.3"
futures-timer = "^2.0"
log = "^0.4"
ctrlc = "3.1"