[package]
name = "message-broker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratsio = { git = "https://github.com/mnetship/ratsio.git", rev = "f49ddf2ea90c52f5ead051b31b36126cd3d38f56" }
env_logger = {version="^0.9"}
utils = {path = "../utils"}
runtime = {git = "https://github.com/RealisNetwork/Realis.Network.git", rev = "4d2092476407611865f37f412f96093c84c51c80", package = "node-runtime", default-features = false}
sp-core = { git = "https://github.com/paritytech/substrate", rev = "03d4d0d7c129eec3d3ab2876bddbe5d6dfa1f178" }
tokio = { version = "1.10", features = ["rt-multi-thread", "net", "time", "io-util", "macros", "sync"] }
tokio-util = { version = "^0.6", features = ["codec"] }
native-tls = { version = "^0.2", optional = true }
tokio-native-tls = { version = "^0.3", optional = true }
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = "0.3.16"
serde_json = { version = "1.0.66"}
primitive-types = "0.9.1"
futures-core = "^0.3"
futures-timer = "^3.0"
log = "^0.4"
ctrlc = "3.2"
web3 = "0.17.0"
realis-sender = { version = "0.1.0", path = "../realis-sender"}
bsc-sender = { version = "0.1.0", path = "../bsc-sender"}
primitives = { version = "0.1.0", path = "../primitives" }
realis-responser = { version = "0.1.0", path = "../realis-responser" }
bytes = "1.1.0"

[features]
default = ["std", "tls"]
std = [
    "runtime/std",
]

tls = ["native-tls", "tokio-native-tls"]
