[package]
name = "primitives"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Custom dependencies
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-primitives" }
runtime = { git = "git://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "node-runtime" }

#
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
thiserror = "1.0.26"
dotenv = "0.15.0"
