[package]
name = "primitives"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Custom dependencies
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-primitives" }
runtime = { git =  "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "node-runtime" }
realis-bridge = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-bridge" }

#
sp-core = { git = "https://github.com/paritytech/substrate", rev = "03d4d0d7c129eec3d3ab2876bddbe5d6dfa1f178" }
substrate-api-client = { git = "https://github.com/RealisNetwork/substrate-api-client.git" }
tokio-postgres = { version = "0.7.2", features = ["with-serde_json-1"] }
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
thiserror = "1.0.26"
dotenv = "0.15.0"
ethabi = "14.1.0"
web3 = "0.17.0"

[dependencies.tokio]
version = "1"
features = ["time"]

[dependencies.uuid]
version = "0.8.2"
features = ["serde"]