[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Custom dependencies
runtime = { git =  "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "node-runtime" }
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-primitives" }
realis-bridge = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-bridge" }
#
substrate-api-client = { git = "https://github.com/RealisNetwork/substrate-api-client.git" }
#
tokio-postgres = { version = "0.7.2", features = ["with-serde_json-1"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.72"
thiserror = "1.0.26"
ethabi = "14.1.0"
web3 = "0.17.0"