[package]
name = "adapter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-primitives" }
primitives = { path = "../primitives" }
db = { path = "../db" }

#
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git" }
runtime = { git =  "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "node-runtime" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master", package = "sp-runtime" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master", package = "sp-core" }
serde = { version = "1.0.129", features = ["derive"] }
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0" }
futures = "0.3"
log = "0.4.14"