[package]
name = "realis-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-lib = { git = "https://github.com/RealisNetwork/rust-lib.git" }
primitives = { path = "../primitives" }
db = { path = "../db" }

#
frame-system = { git = "https://github.com/paritytech/substrate", rev = "e7b93e1b1abcf0865824c68d10850bbb451e295f" }
runtime = { git =  "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "node-runtime" }
realis-bridge = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-bridge" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master", package = "sp-runtime" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master", package = "sp-core" }
substrate-api-client = { git = "https://github.com/RealisNetwork/substrate-api-client.git" }
serde = { version = "1.0.133", features = ["derive"] }
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0" }
web3 = "0.17.0"
log = "0.4.14"
