[package]
name = "realis-responser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Custom dependencies
primitives = { path = "../primitives" }

#
ratsio = { git = "https://github.com/mnetship/ratsio.git", rev = "f49ddf2ea90c52f5ead051b31b36126cd3d38f56" }
tokio = { version = "1", features = ["sync"] }
serde_json = "1.0.67"
log = "0.4"

[features]
default = ["std"]
std = [
    "tokio/sync",
]