[package]
name = "realis-sender"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
primitive-types = { version = "0.9.0", default-features = false }
runtime = { git = "https://github.com/RealisNetwork/Realis.Network.git", rev = "e447d2124a9a04b18dbccf89079bd91eabdfe49a", package = "node-runtime" }
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", rev = "e447d2124a9a04b18dbccf89079bd91eabdfe49a", package = "realis-primitives", default-features = false}
sp-keyring = { git = "https://github.com/paritytech/substrate.git", rev = "03d4d0d7c129eec3d3ab2876bddbe5d6dfa1f178", default-features = false }
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", rev = "672a5d4ed9f076525235fef6b5af288f666df803" }

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
package = "sp-core"
default-features = false
features = ["full_crypto"]

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
package = "sp-runtime"
default-features=false

[features]
default = ["std"]
std = [
    "sp-core/std",
]
# need to add this for the app_crypto macro
full_crypto = []
