[package]
name = "realis-sender"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
runtime = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "node-runtime" }
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-primitives", default-features = false }
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", rev = "672a5d4ed9f076525235fef6b5af288f666df803" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master", package = "sp-core" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master", package = "sp-runtime", default-features=false }

[features]
default = ["std"]
std = [
    "sp-core/std",
]
# need to add this for the app_crypto macro
full_crypto = []
