[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10", optional = true }
runtime = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "node-runtime" }
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-primitives", default-features = false }
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", rev = "672a5d4ed9f076525235fef6b5af288f666df803" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "03d4d0d7c129eec3d3ab2876bddbe5d6dfa1f178" }
ratsio = { git = "https://github.com/mnetship/ratsio.git", rev = "f49ddf2ea90c52f5ead051b31b36126cd3d38f56" }
futures = "0.3.17"
log = "^0.4"
env_logger = {version="^0.9"}
web3 = "0.17.0"
secp256k1 = { version = "0.20", features = ["recovery"] }
tokio-postgres = "0.7.1"
serde_json = "1.0.67"
utils = { path = "../utils" }

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
package = "sp-runtime"
default-features=false

[features]
default = ["std"]
std = [
    "tokio",
    "sp-core/std",
]
