[package]
name = "utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

web3 = "0.17.0"

secp256k1 = { version = "0.20", features = ["recovery"] }

tokio = { version = "0.2.25", optional = true, features = ["full"] }

[features]
default = ["std"]
std = [
    "tokio"
]