[package]
name = "utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
secp256k1 = { version = "0.20", features = ["recovery"] }
tokio = { version = "1.9", optional = true }
web3 = "0.17.0"

[features]
default = ["std"]
std = [
    "tokio"
]
