[package]
name = "utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
realis-primitives = { git = "https://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "realis-primitives" }
runtime = { git = "htttps://github.com/RealisNetwork/Realis.Network.git", branch = "main", package = "node-runtime" }
ratsio = { git = "https://github.com/mnetship/ratsio.git", rev = "f49ddf2ea90c52f5ead051b31b36126cd3d38f56" }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "03d4d0d7c129eec3d3ab2876bddbe5d6dfa1f178", package = "sp-core"}
primitives = {version = "0.1.0", path = "../primitives"}
primitive-types = "0.10.1"
#
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.66"
thiserror = "1.0.26"
secp256k1 = { version = "0.20", features = ["recovery"] }
tokio = { version = "1.10", optional = true }
web3 = "0.17.0"

[features]
default = ["std"]
std = [
    "tokio"
]
